<resources>
    <string name="app_name">Contador</string>
    <string name="escolha_fornecedor_hint">Escolha No Botão Abaixo</string>
    <string name="hint_cnpj_nome_ou_fantasia">CNPJ, nome ou nome fantasia</string>
    <string name="hint_digite_nome_loja">Digite O Nome da Loja</string>
    <string name="title_activity_alterar_deletar_contagem">Contagem: alterar, deletar ou manipular</string>
    <string name="title_activity_adicionar_contagem_produto">Contagem e Produto: adicionar</string>
    <string name="title_activity_base">ActivityBase</string>
    <string name="menu_item_habilitar_campo_quant">Campo De Quantidade</string>
    <string name="leitura_codigo">Aponte sua câmera para o QR Code</string>
    <string name="descricao">Descrição</string>
    <string name="descricao_dois_pontos">Descrição:</string>
    <string name="dados_de_contagem">Dados de Contagem</string>
    <string name="loja_dois_pontos">Loja:</string>
    <string name="data_dois_pontos">Data:</string>
    <string name="finalizada_dois_pontos">Finalizada:</string>
    <string name="dados_de_fornecedor">Dados De Fornecedor</string>
    <string name="cnpj_dois_pontos">CNPJ:</string>
    <string name="nome_dois_pontos">Nome:</string>
    <string name="fantasia_dois_pontos">Fantasia:</string>
    <string name="dados_de_loja">Dados de Loja</string>
    <string name="hint_digite_cod_de_barra">Digite o Código De Barra do Produto</string>
    <string name="alterar_deletar_marca">Alterar/Deletar Marca</string>
    <string name="dados_de_produto">Dados de Produto</string>
    <string name="cod_de_barras_dois_pontos">Cód. de Barras:</string>
    <string name="fornecedor_atual_dois_pontos">Fornecedor Atual:</string>
    <string name="preco_venda_dois_pontos">Preço De Venda:</string>
    <string name="preco_custo_dois_pontos">Preço De Custo:</string>
    <string name="cnpj_ja_existe_no_sistema">CNPJ Já Existe No Sistema</string>
    <string name="nome_fantasia_dois_pontos">Nome Fantasia:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="contador">Contador</string>
    <string name="produto">Produto</string>
    <string name="fornecedor">Fornecedor</string>
    <string name="loja">Loja</string>
    <string name="hint_a_definir">A Definir</string>
    <string name="cadastro_de_contagem">Cadastro de Contagem</string>
    <string name="cadastro_de_fornecedor">Cadastro de Fornecedor</string>
    <string name="cadastro_de_loja">Cadastro de Loja</string>
    <string name="matriz_dois_pontos">Matriz:</string>
    <string name="cadastro_de_marca">Cadastro de Marca</string>
    <string name="cadastro_de_produto">Cadastro de Produto</string>
    <string name="cod_de_barras_ja_existe_no_sistema">Código De Barras Já Existe No Sistema</string>
    <string name="gerenciar_cod_de_barras_de_fornecedor">Gerenciar Cód. de Barras de Fornecedor</string>
    <string name="fornecedor_dois_pontos">Fornecedor:</string>
    <string name="escolher_fornecedor">Escolher Fornecedor</string>
    <string name="remover_fornecedor">Remover Fornecedor</string>
    <string name="marca_dois_pontos">Marca:</string>
    <string name="escolha_no_botao_abaixo">Escolha No Botão Abaixo</string>
    <string name="escolher_marca">Escolher Marca</string>
    <string name="remover_marca">Remover Marca</string>
    <string name="inserir_cod_de_barras_de_fornecedor">Inserir Cód. de Barras de Fornecedor</string>
    <string name="quant_de_cod">Quant. de Códigos</string>
    <string name="zero">0</string>
    <string name="codigo">Código</string>
    <string name="intervalo_dois_pontos">Intervalo:</string>
    <string name="a">a</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="cnpj">CNPJ</string>
    <string name="nome">Nome</string>
    <string name="fantasia">Fantasia</string>
    <string name="informe_a_quantidade_a_ser_adicionada">Informe a Quantidade a Ser Adicionada:</string>
    <string name="quantidade_adicionada_dois_pontos">Quantidade Adicionada:</string>
    <string name="email_dois_pontos">Email:</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="tipo_contagem_dois_pontos">Tipo de Contagem:</string>
    <string name="telefone_dois_pontos">Telefone:</string>
    <string name="nao_possui">Não Possui</string>
    <string name="inserir_manualmente">Inserir Manualmente</string>
    <string name="campo_data">%s/%s/%s</string>
    <string name="endereco_dois_pontos">Endereço:</string>
    <string name="inscricao_estadual_dois_pontos">Inscrição Estadual:</string>
    <string name="hint_digite_nome_operadora">Digite o Nome da Operadora</string>
    <string name="cadastro_de_operadora">Cadastro de Operadora de Cartão</string>
    <string name="ncm_dois_pontos">NCM:</string>
    <string name="cod_barras_fornecedor_dois_pontos">Cód. De Barras De Fornecedor:</string>
    <string name="gerenciar_grades">Gerenciar Grades</string>
    <string name="inserir_produto_grade">Inserir Grade de Produto</string>
    <string name="pesquisar_por">Pesquisar Por:</string>
    <string name="produtos_listados">Produtos Listados:</string>
    <string name="tipo_grade_dois_pontos">Tipo de Grade:</string>
    <string name="grade_dois_pontos">Grade:</string>
    <string name="btn_inserir_em_formacao_atual_grade">Inserir em Formação Atual</string>
    <string name="grade_formacao_atual_dois_pontos">Formação Atual:</string>
    <string name="inserir_grade">Inserir Grade</string>
    <string name="grades_de_produto">Grades de Produto</string>
    <string name="placeholder_maisculo">PLACEHOLDER</string>
    <string name="imagem_barcode">Imagem Representando um Código de Barras</string>
    <string name="leitura_de_codigo_de_barras">Leitura de Cód. De Barras</string>
    <string name="grade">Grade</string>
    <string name="tipo_grade">Tipo de Grade</string>
    <string name="numero_de_grades">Nº de Grades:</string>
    <string name="inserir_tipo_grade">Inserir Tipo de Grade</string>
    <string name="cadastrar_nova_grade">Cadastrar Grade</string>
    <string name="possui_grade">Possui Grades?</string>
    <string name="grades_de_produto_encontradas">Grades Encontradas</string>
    <string name="nao_encontrei_a_grade">Nâo Encontrei a Grade</string>
    <string name="dados_do_produto">Dados do Produto</string>
    <string name="dados_do_grade">Dados de Grade</string>
    <string name="sem_grade">SEM GRADE</string>
    <string name="cadastrar_fornecedor_manualmente">Cadastrar Fornecedor Manualmente</string>
    <string name="exportar_fornecedores_para_excel">Exportar Fornecedores Para Excel</string>
    <string name="exportar_produtos">Exportar Produtos</string>
    <string name="codigo_dois_pontos">Código:</string>
    <string name="fab_inserir_contagem_de_produto">Inserir Contagem De Produto</string>
    <string name="cod_de_barras_alt_dois_pontos">Cód. De Barras Alt.:</string>
    <string name="produto_minusculo">produto</string>
    <string name="placeholder_minusculo">placeholder</string>
</resources>
