<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/codigo_dois_pontos"/>

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/descricao_dois_pontos"/>

    <EditText
        android:id="@+id/txtDescricaoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/grade_dois_pontos"/>

    <EditText
        android:id="@+id/txtDescricaoGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/quantidade_adicionada_dois_pontos"/>

    <EditText
        android:id="@+id/txtQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

</LinearLayout>