<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_de_fornecedor"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cnpj_dois_pontos"
                android:textColor="#000"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/txtCnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lblCnpjRepetido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cnpj_ja_existe_no_sistema"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:visibility="gone" />
        </TableRow>

        <TableRow android:layout_marginTop="10dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nome_dois_pontos"
                android:textColor="#000"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nome_fantasia_dois_pontos"
                android:textColor="#000"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/txtFantasia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_dois_pontos"
                android:textColor="#000"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:height="70sp"
            android:background="@drawable/botao_active"
            android:text="@string/cadastrar"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>