<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dip"
    android:orientation="vertical"
    tools:context="com.vandamodaintima.jfpsb.contador.view.fornecedor.PesquisarFornecedor">

    <EditText
        android:id="@+id/txtPesquisaFornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/hint_cnpj_nome_ou_fantasia"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cnpj"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_weight="2"
            android:background="@drawable/item_lista_linha_inferior">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nome"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fantasia"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp" />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/listViewFornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"></ListView>

</LinearLayout>
