<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false">

    <TableRow xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cod_de_barras_dois_pontos"
            android:textSize="22sp" />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/txtCodBarraProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/hint_a_definir"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descricao_dois_pontos"
            android:textSize="22sp" />
    </TableRow>


    <TableRow>

        <EditText
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/hint_a_definir"
            android:textSize="20sp" />
    </TableRow>
</TableLayout>