<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dip"
    android:orientation="vertical"
    tools:context="com.vandamodaintima.jfpsb.contador.view.contagem.PesquisarContagem">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loja_dois_pontos"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinnerLoja"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intervalo_dois_pontos"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/txtDataInicial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:textAlignment="center"
                android:textColor="#000" />

            <TextView
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/a"
                android:textAlignment="center"
                android:textColor="#000" />

            <EditText
                android:id="@+id/txtDataFinal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:textAlignment="center"
                android:textColor="#000" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnPesquisar"
                style="@style/BtnPesquisar" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loja"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data_inicial"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewContagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip" />

</LinearLayout>
